Part 4 + new way to send .parquet file to Minio (in addition to shell script already existing)